# humansync

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
crates/humansync/: Cargo.toml
crates/humansync-server/: Cargo.toml
crates/humansync-server/src/: api.rs  db.rs  lib.rs  main.rs  peer.rs
crates/humansync-server/tests/: api_integration.rs
crates/humansync/examples/: basic_usage.rs
crates/humansync/src/: config.rs  doc.rs  error.rs  identity.rs  lib.rs  node.rs  registry.rs  store.rs
crates/humansync/src/sync/: automerge.rs  blobs.rs  mod.rs
crates/humansync/tests/: iroh_discovery.rs  poc_integration.rs  sync_integration.rs
docs/: PRD.md  iroh-0.92-api-notes.md  week-1-2-learnings.md
docs/plans/: 2026-02-05-mvp-implementation-plan.md
humandocs/: index.html  package-lock.json  package.json  vite.config.ts
humandocs/src/: App.tsx  types.ts
humandocs/src-tauri/: Cargo.toml  build.rs  ios_stubs.c  tauri.conf.json
humandocs/src-tauri/capabilities/: default.json
humandocs/src-tauri/src/: commands.rs  lib.rs  main.rs
humandocs/src/components/: AppLayout.tsx  Attachments.tsx  DocumentEditor.tsx  DocumentList.tsx  SetupScreen.tsx  SyncStatus.tsx
humandocs/src/hooks/: useDocuments.ts  useSyncStatus.ts
humandocs/src/styles/: app.css
humandocs/src/utils/: caretCoordinates.ts
scripts/: ios-deploy.sh
