[package]
name = "humansync-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HumanSync server - cloud peer and device registry"

[lib]
name = "humansync_server"
path = "src/lib.rs"

[[bin]]
name = "humansync-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
humansync = { path = "../humansync" }
iroh = { version = "0.92.0", features = ["discovery-local-network"] }
parking_lot = "0.12.5"
rand = "0.8"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.24.0"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1.0"
serde_json = "1.0"

[lints]
workspace = true
