[package]
name = "humansync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Local-first sync layer for HumanCorp apps"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.100"
automerge = "0.7.3"
base64 = "0.22.1"
blake3 = "1.8.3"
bytes = "1.11.1"
chrono = { version = "0.4.43", features = ["serde"] }
dirs = "6.0.0"
futures = "0.3.31"
iroh = { version = "0.92.0", features = ["discovery-local-network"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
iroh-blobs = "0.92.0"
parking_lot = "0.12.5"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
sha2 = "0.10"
tracing = "0.1.44"
uuid = "1.20.0"

[dev-dependencies]
tempfile = "3.24.0"
tracing-subscriber = "0.3"

[lints]
workspace = true
