[package]
name = "humandocs"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A local-first document editor powered by HumanSync"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
humansync = { path = "../../crates/humansync" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6.0"

[lints]
workspace = true
